<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.acme.banking</groupId>
	<artifactId>dbo</artifactId>
	<version>1.1.12</version>
	<packaging>jar</packaging>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.5.4</version>
	</parent>

	<distributionManagement>
		<repository>
			<id>github</id>
			<name>GitHub Packages</name>
			<url>https://maven.pkg.github.com/eugene-krivosheyev/agile-practices-application</url>
		</repository>
	</distributionManagement>

	<repositories>
		<repository>
			<id>jcenter</id> <!-- for JunitInsights dependency -->
			<url>https://jcenter.bintray.com/</url>
		</repository>
	</repositories>

	<properties>
		<sonar.junit.reportPaths>target/surefire-reports,target/failsafe-reports</sonar.junit.reportPaths>
	</properties>

	<build>
		<finalName>${project.artifactId}-${project.version}</finalName> <!-- TODO Set jar final name -->

		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-clean-plugin</artifactId>
				<version>3.1.0</version>
				<configuration>
					<filesets>
						<fileset>
							<directory>${basedir}</directory>
							<includes>
								<include>log/</include>
								<include>dbo-db/</include>
								<include>liquibase-rollback.sql</include>
								<include>derby.log</include>
							</includes>
						</fileset>
					</filesets>
				</configuration>
			</plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                </configuration>
            </plugin>

			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.5</version>
				<configuration>
					<skip>${skipTests}</skip>
					<excludes>
						<exclude>java/lang/*</exclude>
						<exclude>java/util/*</exclude>
						<exclude>com/acme/dbo/Application.class</exclude>
						<exclude>com/acme/dbo/config/*</exclude>
					</excludes>
				</configuration>
				<executions>
					<execution>
						<id>pre-unit-test</id>
						<phase>test-compile</phase>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
						<configuration>
							<destFile>target/jacoco.exec</destFile>
							<propertyName>surefireArgs</propertyName>
						</configuration>
					</execution>
					<execution>
						<id>post-unit-test</id>
						<phase>test</phase>
						<goals>
							<goal>report</goal>
						</goals>
						<configuration>
							<dataFile>target/jacoco.exec</dataFile>
							<outputDirectory>target/jacoco-reports/ut</outputDirectory>
						</configuration>
					</execution>
					<execution>
						<id>pre-integration-test</id>
						<phase>pre-integration-test</phase>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
						<configuration>
							<destFile>target/jacoco-it.exec</destFile>
							<propertyName>failsafeArgs</propertyName>
						</configuration>
					</execution>
					<execution>
						<id>post-integration-test</id>
						<phase>post-integration-test</phase>
						<goals>
							<goal>report</goal>
						</goals>
						<configuration>
							<dataFile>target/jacoco-it.exec</dataFile>
							<outputDirectory>target/jacoco-reports/it</outputDirectory>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0-M3</version>
				<configuration>
					<argLine>${surefireArgs} -Xms1024m -Xmx1024m -XX:MaxPermSize=256m</argLine>
					<excludes>
						<exclude>**/*IT.java</exclude>
						<exclude>**/*ST.java</exclude>
					</excludes>
					<systemPropertyVariables>
						<derby.stream.error.file>log/derby.log</derby.stream.error.file>
						<junit.jupiter.extensions.autodetection.enabled>true</junit.jupiter.extensions.autodetection.enabled>
						<de.adesso.junitinsights.enabled>true</de.adesso.junitinsights.enabled>
						<de.adesso.junitinsights.reportpath>target/junitinsights-reports/</de.adesso.junitinsights.reportpath>
					</systemPropertyVariables>
					<properties>
						<configurationParameters> <!-- Due to use of @MockBean: https://docs.spring.io/spring/docs/current/spring-framework-reference/testing.html#testcontext-parallel-test-execution -->
							junit.jupiter.execution.parallel.enabled=false
						</configurationParameters>
					</properties>
					<reportsDirectory>target/surefire-reports</reportsDirectory>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.pitest</groupId>
				<artifactId>pitest-maven</artifactId>
				<version>1.4.10</version>
				<dependencies>
					<dependency>
						<groupId>org.pitest</groupId>
						<artifactId>pitest-junit5-plugin</artifactId>
						<version>0.9</version>
					</dependency>
				</dependencies>
				<executions>
					<execution>
						<id>pit-report-ut</id>
						<phase>test</phase>
						<goals>
							<goal>mutationCoverage</goal>
						</goals>
						<configuration>
							<reportsDirectory>target/pit-reports</reportsDirectory>
							<targetTests>
								<param>com.acme.dbo.ut.*</param>
							</targetTests>
						</configuration>
					</execution>
					<execution>
						<id>pit-report-it</id>
						<phase>integration-test</phase>
						<goals>
							<goal>mutationCoverage</goal>
						</goals>
						<configuration>
							<skip>true</skip> <!-- Due to PITEST bug: it implicitly add filter for *IT and *ST tests. Workaround: use JUnit4 test suite for integration tests. -->
							<reportsDirectory>target/pit-reports/it</reportsDirectory>
							<targetTests>
								<param>com.acme.dbo.it.*</param>
							</targetTests>
						</configuration>
					</execution>
				</executions>
				<configuration>
					<targetClasses>
						<param>com.acme.dbo.*</param>
					</targetClasses>
					<excludedClasses>
						<class>com.acme.dbo.Application</class>
						<class>com.acme.dbo.config.*</class>
						<class>com.google.*</class>
						<class>org.apache.*</class>
						<class>org.springframework.*</class>
					</excludedClasses>
					<timestampedReports>false</timestampedReports>
					<threads>4</threads>
					<jvmArgs>
						<arg>-Dderby.stream.error.file=log/derby.log</arg>
					</jvmArgs>
					<withHistory>true</withHistory>
					<historyOutputFile>target/pit.history</historyOutputFile>
					<historyInputFile>target/pit.history</historyInputFile>
					<avoidCallsTo>
						<avoidCallsTo>org.slf4j</avoidCallsTo>
						<avoidCallsTo>java.util.*</avoidCallsTo>
						<avoidCallsTo>java.lang.*</avoidCallsTo>
					</avoidCallsTo>
					<skip>${skipTests}</skip>
					<outputFormats>
						<format>HTML</format>
						<format>XML</format>
					</outputFormats>
				</configuration>
			</plugin>

			<!-- To make an executable jar [FAT JAR which includes all dependencies along with spring boot loader] that you can run on commandline using java -jar NAME -->
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<version>2.2.0.RELEASE</version>
				<configuration>
					<executable>true</executable>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>build-info</goal> <!-- git-commit-id-plugin + boot actuator /info -->
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>3.0.0-M3</version>
				<configuration>
					<argLine>${failsafeArgs} -Xms1024m -Xmx1024m -XX:MaxPermSize=256m</argLine>
					<properties>
						<configurationParameters> <!-- Due to use of @MockBean: https://docs.spring.io/spring/docs/current/spring-framework-reference/testing.html#testcontext-parallel-test-execution -->
							junit.jupiter.execution.parallel.enabled=false
						</configurationParameters>
					</properties>
					<includes>
						<include>**/*IT.java</include>
						<include>**/*ST.java</include>
					</includes>
					<excludedGroups>selenium | docker</excludedGroups>
					<systemPropertyVariables>
						<derby.stream.error.file>log/derby.log</derby.stream.error.file>
						<junit.jupiter.extensions.autodetection.enabled>true</junit.jupiter.extensions.autodetection.enabled>
						<de.adesso.junitinsights.enabled>true</de.adesso.junitinsights.enabled>
						<de.adesso.junitinsights.reportpath>target/junitinsights-reports/</de.adesso.junitinsights.reportpath>
					</systemPropertyVariables>
					<reportsDirectory>target/failsafe-reports</reportsDirectory>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>3.1.2</version>
				<executions>
					<execution>
						<id>copy-wiremock-for-qa-testing</id>
						<phase>prepare-package</phase>
						<goals>
							<goal>copy</goal>
						</goals>
						<configuration>
							<artifactItems>
								<artifactItem>
									<groupId>com.github.tomakehurst</groupId>
									<artifactId>wiremock-jre8-standalone</artifactId>
									<version>2.28.1</version>
									<type>jar</type>
									<overWrite>false</overWrite>
									<outputDirectory>${project.build.directory}/test-classes</outputDirectory>
								</artifactItem>
							</artifactItems>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>com.googlecode.maven-download-plugin</groupId>
				<artifactId>download-maven-plugin</artifactId>
				<version>1.6.7</version>
				<executions>
					<execution>
						<id>download-derby</id>
						<phase>prepare-package</phase>
						<goals>
							<goal>wget</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<url>https://archive.apache.org/dist/db/derby/db-derby-10.13.1.1/db-derby-10.13.1.1-bin.zip</url>
					<unpack>true</unpack>
					<outputDirectory>${project.build.directory}</outputDirectory>
					<md5>cb0a722de0b8a26d57f7309c4e2a9a01</md5>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<version>2.5.4</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.jayway.jsonpath</groupId>
			<artifactId>json-path</artifactId>
			<version>2.6.0</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-java</artifactId>
			<version>3.141.59</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>io.cucumber</groupId>
			<artifactId>cucumber-java</artifactId>
			<version>6.11.0</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>io.cucumber</groupId>
			<artifactId>cucumber-spring</artifactId>
			<version>6.11.0</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>io.cucumber</groupId>
			<artifactId>cucumber-junit</artifactId>
			<version>6.11.0</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>net.masterthought</groupId>
			<artifactId>cucumber-reporting</artifactId>
			<version>5.6.0</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>net.sourceforge.htmlunit</groupId>
			<artifactId>htmlunit-core-js</artifactId>
			<version>2.52.0</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>io.github.bonigarcia</groupId>
			<artifactId>webdrivermanager</artifactId>
			<version>5.0.0</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>de.adesso</groupId>
			<artifactId>junit-insights</artifactId>
			<version>1.1.0</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.codeborne</groupId>
			<artifactId>selenide</artifactId>
			<version>5.24.2</version>
            <scope>test</scope>
		</dependency>
        <dependency>
            <groupId>ru.yandex.qatools.htmlelements</groupId>
            <artifactId>htmlelements-java</artifactId>
            <version>1.20.0</version>
			<scope>test</scope>
        </dependency>
		<dependency>
			<groupId>org.testcontainers</groupId>
			<artifactId>testcontainers</artifactId>
			<version>1.16.0</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.testcontainers</groupId>
			<artifactId>junit-jupiter</artifactId>
			<version>1.16.0</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.testcontainers</groupId>
			<artifactId>postgresql</artifactId>
			<version>1.16.0</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>1.18.20</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.derby</groupId>
			<artifactId>derby</artifactId>
			<version>10.13.1.1</version>
		</dependency>
		<dependency>
			<groupId>org.apache.derby</groupId>
			<artifactId>derbyclient</artifactId>
			<version>10.13.1.1</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
			<version>2.5.4</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
			<version>2.5.4</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-logging</artifactId>
			<version>2.5.4</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator</artifactId>
			<version>2.5.4</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
			<version>2.5.4</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-validation</artifactId>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-to-slf4j</artifactId>
			<version>2.14.1</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>jul-to-slf4j</artifactId>
			<version>1.7.32</version>
		</dependency>
		<dependency>
			<groupId>io.springfox</groupId>
			<artifactId>springfox-boot-starter</artifactId>
			<version>3.0.0</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.module</groupId>
			<artifactId>jackson-module-parameter-names</artifactId>
			<version>2.12.5</version>
		</dependency>
		<dependency>
			<groupId>org.liquibase</groupId>
			<artifactId>liquibase-core</artifactId>
			<version>4.4.3</version>
		</dependency>
		<dependency>
			<groupId>net.logstash.logback</groupId>
			<artifactId>logstash-logback-encoder</artifactId>
			<version>6.6</version>
		</dependency>
		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<version>42.2.18</version>
		</dependency>
		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpclient</artifactId>
			<version>4.5.13</version>
		</dependency>
		<dependency>
			<groupId>io.github.git-commit-id</groupId>
			<artifactId>git-commit-id-maven-plugin</artifactId>
			<version>4.9.9</version>
		</dependency>
	</dependencies>
</project>
